--- a/static/css/components/index.css
+++ b/static/css/components/index.css
@@ -8,5 +8,6 @@
 @import 'cards.css';
 @import 'forms.css';
 @import 'alerts.css';
+@import 'toasts.css';
 
 /* Add new component imports here as they are developed */
